[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/EnemySprites/Mini Boss the bat/Bat3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/EnemySprites/Mini Boss the bat/Bat2.png" type="Texture" id=3]
[ext_resource path="res://Assets/EnemySprites/Mini Boss the bat/Bat4.png" type="Texture" id=4]
[ext_resource path="res://Assets/EnemySprites/Mini Boss the bat/Bat1.png" type="Texture" id=5]
[ext_resource path="res://Assets/EnemySprites/Mini Boss the bat/Bat5.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=4]
radius = 57.5847

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 540, 540 )

[node name="Boss" type="KinematicBody2D" groups=["Damagable"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
playing = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Aim" type="Node2D" parent="."]

[node name="BulletPoint" type="Node2D" parent="Aim"]
position = Vector2( 76, 0 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
